--- a/clientB.css
+++ b/clientB.css
@@ -56,6 +56,22 @@ body{
     background-color: rgba(112, 112, 112, 0.5); 
 }
 
+#startButton{
+    position: absolute;
+    top: 90%;
+    left: 48%;
+    border: 1px solid gray;
+    background-color: rgba(255, 255, 255, .5);
+    z-index: 1;
+    padding: 5px;
+    border-radius: 10px;
+    font-size: large;
+}
+
+#startButton:active{
+    background-color: rgba(112, 112, 112, 0.5); 
+}
+
 #arret{
     position: absolute;
     top: 90%;
